Fix broken link in QMagnetometerReading

The link, which describes how to calibrate the magnetometer sensor, is
no longer available. As a replacement we now provide a generic approach
for calibrating, and recommend that the user checks their device's
documentation for more information.

Change-Id: I04de5fba76b88fb7417d180ffe1f2c8c249610e5
Task-number: QTBUG-57184
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>
Reviewed-by: Lorn Potter <lorn.potter@canonical.com>